--- a/lab10/feeder/templates/feeder/base_site.html
+++ b/lab10/feeder/templates/feeder/base_site.html
@@ -44,11 +44,11 @@
 </nav>
 </div>
 </header>
-
+<div class="container">
 {% block content %}
 
 {% endblock %}
-
+</div>
 <script type="text/javascript" src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
 <script type="text/javascript" src="{% static 'feeder/materialize.js' %}"></script>
 
