Database set up done

--- a/lab10/feeder/templates/feeder/index.html
+++ b/lab10/feeder/templates/feeder/index.html
@@ -2,10 +2,12 @@
 {% load static %}
 
 {% block content %}
-<h1> Welcome to Feed'er Management Portal <h1>
-<form method="POST">
+<h1> Welcome to Feed'er Management Portal </h1>
+<h3 style="textcolor:red;"> {{ error_message }} </h3>
+<form action="{% url 'feeder:session' %}" method="POST">
 	{% csrf_token %}
 	{{ form.as_p }}
+	<input class="btn" type="submit" name="Login">
 </form>
 
 {% endblock %}
