--- a/lab10/feeder/templates/feeder/index.html
+++ b/lab10/feeder/templates/feeder/index.html
@@ -2,12 +2,16 @@
 {% load static %}
 
 {% block content %}
-<h1> Welcome to Feed'er Management Portal </h1>
-<h3 style="textcolor:red;"> {{ error_message }} </h3>
-<form action="{% url 'feeder:session' %}" method="POST">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<input class="btn" type="submit" name="Login">
-</form>
+<h2 style="text-align:center" > Feed'er Management Portal </h1>
+<h3> Welcome back, {{ user.get_full_name }} </h3>
 
+
+{% endblock %}
+
+{% block navbar %}
+    <li><a href="courses">Courses</a></li>
+    <li><a href="{% url 'feeder:logout' %}">Sign out</a></li>
+{% endblock %}
+{% block name %}
+    {{ user.get_full_name }}
 {% endblock %}
