--- a/lab10/feeder/templates/feeder/login.html
+++ b/lab10/feeder/templates/feeder/login.html
@@ -1,5 +1,31 @@
-<h1>Login Page</h1>
-<form action="{% url 'feeder:index' %}" method="post">
-{% csrf_token %}
-<input type="submit" value="Login">
+{% extends "feeder/base_site.html" %}
+{% load static %}
+
+{% block content %}
+<h2 style="text-align:center" > Feed'er Management Portal </h1>
+
+
+<div style="width: 400px; margin: 0 auto;" class="card white">
+<div class="card-content ">
+<form method="POST">
+	{% csrf_token %}
+    <p class="red-text"> {{ error_message }} </p>
+	{% for field in form %}
+    <div class="fieldWrapper">
+        <span class="red-text">{{ field.errors }}</span>
+        {{ field.label_tag }} {{ field }}
+        {% if field.help_text %}
+        <p class="help green-text">{{ field.help_text|safe }}</p>
+        {% endif %}
+    </div>
+    {% endfor %}
+	<button class="btn" type="submit"><i class="material-icons right">send</i>Login</button>
 </form>
+</div>
+</div>
+{% endblock %}
+
+{% block navbar %}
+    <li><a href="{% url 'feeder:login' %}">Login</a></li>
+    <li><a href="{% url 'feeder:register' %}">Register</a></li>    
+{% endblock navbar %}
