--- a/lab10/feeder/templates/admins/base_site.html
+++ b/lab10/feeder/templates/admins/base_site.html
@@ -3,9 +3,6 @@
 <html>
 <head>
   <title font="arial">Audacity</title>
-  {# <link rel="stylesheet" type="text/css" href="styles/nav-bar.css"> #}
-  {# <link rel="stylesheet" type="text/css" href="styles/home.css"> #}
-  {# <link rel="stylesheet" type="text/css" href="materialize/css/materialize.css"> #}
   <link rel="stylesheet" type="text/css" href="{% static 'feeder/materialize.css' %}">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style type="text/css">
@@ -14,10 +11,9 @@
       min-height: 100vh;
       flex-direction: column;
     }
-
-    main {
+    /*main {
       flex: 1 0 auto;
-    }
+    }*/
   </style>
   
 </head>
