--- a/lab10/feeder/templates/admins/index.html
+++ b/lab10/feeder/templates/admins/index.html
@@ -2,16 +2,33 @@
 {% load static %}
 
 {% block content %}
-<h2 style="text-align:center" > Feed'er Management Portal </h1>
-<h3> Welcome back, {{ user.get_full_name }} </h3>
-
-
+<h2 style="text-align:center" > Feed'er Admin Portal </h1>
+<h5> Welcome back, {{ user.get_full_name }} </h5>
+	    <div class="row">
+		    <div class="col s6" style="max-height: 400px; overflow: auto;">
+				<ul class="collection with-header">
+			        <li class="collection-header"><h4>All Courses</h4></li>
+			        {% for course in courses %}	
+			        	<a class="collection-item">{{ course.course_name }} ( {{ course.course_code }} )</a>
+			        {% endfor %}
+			    </ul>
+			</div>
+			<div class="col s6" style="max-height: 400px; overflow: auto;">
+				<ul class="collection with-header">
+			        <li class="collection-header"><h4>Instructors</h4></li>
+			        {% for instructor in instructors %}
+			        	<a class="collection-item">{{ instructor.user.get_full_name }} </a>
+			        {% endfor %}
+			    </ul>
+			</div>
+		</div>
 {% endblock %}
 
 {% block navbar %}
     <li><a href="courses">Courses</a></li>
     <li><a href="{% url 'admins:logout' %}">Sign out</a></li>
 {% endblock %}
+
 {% block name %}
     {{ user.get_full_name }}
 {% endblock %}
