--- a/lab10/feeder/templates/feeder/index.html
+++ b/lab10/feeder/templates/feeder/index.html
@@ -2,8 +2,39 @@
 {% load static %}
 
 {% block content %}
-<h2 style="text-align:center" > Feed'er Management Portal </h1>
-<h3> Welcome back, {{ user.get_full_name }} </h3>
+<h2 style="text-align:center" > Feed'er Management Portal </h2>
+<h5> Welcome back, {{ user.get_full_name }} </h5>
+	
+    {% if user.instructor.course.all %}
+    <div class="row">
+	    <div class="col s6">
+			<ul class="collection with-header">
+		        <li class="collection-header"><h4>Your Courses</h4></li>
+		        {% for course in user.instructor.course.all %}	
+		        	<a class="collection-item">{{ course.course_name }} ( {{ course.course_code }} )</a>
+		        {% endfor %}
+		    </ul>
+		</div>
+		<div class="col s6">
+			<ul class="collection with-header">
+		        <li class="collection-header"><h4>Deadlines</h4></li>
+		        {# {% for course in user.instructor.course.all %}	 #}
+		        	{# <a class="collection-item">{{ course.course_name }} ( {{ course.course_code }} )</a> #}
+		        {# {% endfor %} #}
+		    </ul>
+		</div>
+	</div>
+    {% else %}
+    <div class="col s6 center">
+    <div class="card">
+    <div class="card-content">
+        <span class="card-title">No Courses</span>
+        <p> Please contact your administrator to get you registered to your courses.
+        </p>
+    </div>
+    </div> 
+    </div>
+    {% endif %}
 
 
 {% endblock %}
