--- a/lab10/feeder/templates/admins/base_site.html
+++ b/lab10/feeder/templates/admins/base_site.html
@@ -4,6 +4,7 @@
 <head>
   <title font="arial">Audacity</title>
   <link rel="stylesheet" type="text/css" href="{% static 'feeder/materialize.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'admins/bootstrap-material-datetimepicker.css' %}">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style type="text/css">
     body {
@@ -49,10 +50,15 @@
 </div>
 <script type="text/javascript" src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
 <script type="text/javascript" src="{% static 'feeder/materialize.js' %}"></script>
+<script type="text/javascript" src="{% static 'admins/jquery.formset.js' %}"></script>
 
 <script type="text/javascript">
+  
+  // $('#date-format').bootstrapMaterialDatePicker({ format : 'dddd DD MMMM YYYY - HH:mm' });
   $(document).ready(function() {
-    $('select').material_select();
-});
+      $('select').material_select();
+  });
+  
+
 </script>
 </body>
