--- a/lab10/feeder/templates/admins/index.html
+++ b/lab10/feeder/templates/admins/index.html
@@ -9,7 +9,7 @@
 				<ul class="collection with-header">
 			        <li class="collection-header"><h4>All Courses</h4></li>
 			        {% for course in courses %}	
-			        	<a class="collection-item">{{ course.course_name }} ( {{ course.course_code }} )</a>
+			        	<a class="collection-item" href="{% url 'admins:course' course.id %}">{{ course.course_name }} ( {{ course.course_code }} )</a>
 			        {% endfor %}
 			    </ul>
 			</div>
@@ -17,7 +17,7 @@
 				<ul class="collection with-header">
 			        <li class="collection-header"><h4>Instructors</h4></li>
 			        {% for instructor in instructors %}
-			        	<a class="collection-item">{{ instructor.user.get_full_name }} </a>
+			        	<a class="collection-item" href="{% url 'admins:instructor' instructor.id %}">{{ instructor.user.get_full_name }} </a>
 			        {% endfor %}
 			    </ul>
 			</div>
@@ -25,7 +25,9 @@
 {% endblock %}
 
 {% block navbar %}
-    <li><a href="courses">Courses</a></li>
+    <li><a href="{% url 'admins:addcourse' %}">Add Course</a></li>
+    <li><a href="{% url 'admins:courses' %}">Courses</a></li>
+    <li><a href="{% url 'admins:instructors' %}">Instructor</a></li>
     <li><a href="{% url 'admins:logout' %}">Sign out</a></li>
 {% endblock %}
 
