Create course done

--- a/lab10/feeder/templates/admins/course.html
+++ b/lab10/feeder/templates/admins/course.html
@@ -5,7 +5,9 @@
 <div class="card-content ">
 <form method="POST">
 	{% csrf_token %}
-		{{ form }}
+		{{ cform }}
+		{{ formset }}
+
 
 </form>
 </div>
