--- a/lab10/feeder/templates/admins/add_course.html
+++ b/lab10/feeder/templates/admins/add_course.html
@@ -2,61 +2,48 @@
 {% load static %}
 
 {% block content %}
-<div style="width: 400px; margin: 0 auto;" class="card white">
+<div style="width: 600px; margin: 0 auto;" class="card white">
 <div class="card-content z-depth-5">
+<style type="text/css">
+	.errorlist {
+		color: red;
+	}
+</style>
 
 <form method="POST">
 	{% csrf_token %}
 	<span class="card-title">Add Course</span>
 	
 	{{ cform.as_p }}
+
     <span class="card-title">Expected Semester Exams</span>
     {% for form in asformset.forms %}
     <div class="as">	
     	{{ form.as_p }}
-    	{# <div class="fieldWrapper"> #}
-	        {# {{ form.assignment_name.errors }} #}
-	        {# <label for="{{ form.assignment_name.id_for_label }}">Feedback Name</label> #}
-	        {# {{ form.assignment_name }} #}
-	        {# {% if form.assignment_name.help_text %} #}
-	        {# <p class="help">{{ form.assignment_name.help_text|safe }}</p> #}
-	        {# {% endif %} #}
-	    {# </div> #}
-	    {# <div class="fieldWrapper"> #}
-	        {# {{ form.description.errors }} #}
-	        {# <label for="{{ form.description.id_for_label }}">description</label> #}
-	        {# {{ form.description }} #}
-	        {# {% if form.description.help_text %} #}
-	        {# <p class="help">{{ form.description.help_text|safe }}</p> #}
-	        {# {% endif %} #}
-	    {# </div> #}
-
     </div>
     {% endfor %}
     {{ asformset.management_form }}
 
 	<span class="card-title">Feedback Forms</span>
-    {% for form in fbformset.forms %}
-    <div class="fb ">	
-    	<div class="fieldWrapper">
-	        {{ form.fb_name.errors }}
-	        <label for="{{ form.fb_name.id_for_label }}">Feedback Name</label>
-	        {{ form.fb_name }}
-	        {% if form.fb_name.help_text %}
-	        <p class="help">{{ form.fb_name.help_text|safe }}</p>
-	        {% endif %}
-	    </div>
-	    <div class="fieldWrapper">
-	        {{ form.deadline.errors }}
-	        <label for="{{ form.deadline.id_for_label }}">Deadline</label>
-	        {{ form.deadline }}
-	        {% if form.deadline.help_text %}
-	        <p class="help">{{ form.deadline.help_text|safe }}</p>
-	        {% endif %}
-	    </div>
+    <div class="fb1">	
+    	{{ fbform1.as_p }}
+		<caption class="card-title">Questions</caption>
+	    {% for qform in qsformset1.forms %}
+		    <div class="qs1">	
+		    	{{ qform.as_p }}
+		    </div>
+	    {% endfor %}
+	    {{ qsformset1.management_form }}
+
+	    {{ fbform2.as_p }}
+		<caption class="card-title">Questions</caption>
+	    {% for qform in qsformset2.forms %}
+		    <div class="qs2">	
+		    	{{ qform.as_p }}
+		    </div>
+	    {% endfor %}
+	    {{ qsformset2.management_form }}
     </div>
-    {% endfor %}
-    {{ fbformset.management_form }}
 
 
 	<input class="btn purple darken-4" type="submit" name="Submit">
@@ -68,16 +55,30 @@
 <script type="text/javascript" src="{% static 'admins/moment.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'admins/bootstrap-material-datetimepicker.js' %}"></script>
 <script type="text/javascript">
-	$('.date-format').bootstrapMaterialDatePicker({ format : 'YYYY-MM-DD HH:MM:SS', minDate : new Date() });
+	$('.date-format').bootstrapMaterialDatePicker({ format : 'MM/DD/YYYY HH:MM', minDate : new Date() });
 	$(document).ready(function() {
-      	$('.fb').formset({ 
-      		addText : ' <br><p class="btn white-text green darken-4">Add Feedback Form </p> <br></br>',
-      		deleteText : '<p class="btn white-text red darken-4">Remove Form</p> <br></br> ',
+      	$('.qs1').formset({ 
+      		addText : ' <br><p class="btn white-text green darken-4">Add Question </p> <br></br>',
+      		deleteText : '<p class="btn white-text red darken-4">Remove Question</p> <br></br> ',
+      		prefix: '{{ qsformset1.prefix }}',
+			formCssClass: 'dynamic-formset1'
       	});
-      	$('.as').formset({ 
-      		addText : ' <br><p class="btn white-text green darken-4">Add Exam </p> <br></br>',
-      		deleteText : '<p class="btn white-text red darken-4">Remove Exam</p> <br></br> ',
+      	$('.qs2').formset({ 
+      		addText : ' <br><p class="btn white-text green darken-4">Add Question </p> <br></br>',
+      		deleteText : '<p class="btn white-text red darken-4">Remove Question</p> <br></br> ',
+      		prefix: '{{ qsformset2.prefix }}',
+			formCssClass: 'dynamic-formset2'
       	});
   	});
 </script>
+{% endblock %}
+
+{% block navbar %}
+    <li><a href="{% url 'admins:addcourse' %}">Add Course</a></li>
+    <li><a href="{% url 'admins:courses' %}">Courses</a></li>
+    <li><a href="{% url 'admins:instructors' %}">Instructor</a></li>
+    <li><a href="{% url 'admins:logout' %}">Sign out</a></li>
+{% endblock %}
+{% block name %}
+    {{ user.get_full_name }}
 {% endblock %}
