--- a/lab10/feeder/templates/admins/index.html
+++ b/lab10/feeder/templates/admins/index.html
@@ -4,6 +4,7 @@
 {% block content %}
 <h2 style="text-align:center" > Feed'er Admin Portal </h1>
 <h5> Welcome back, {{ user.get_full_name }} </h5>
+<h6 class="green-text">{{ message }}</h6>
 	    <div class="row">
 		    <div class="col s6" style="max-height: 400px; overflow: auto;">
 				<ul class="collection with-header">
@@ -32,5 +33,7 @@
 {% endblock %}
 
 {% block name %}
-    {{ user.get_full_name }}
+	<li><a href=""> {{ user.get_full_name }} </a> </li>
+	<li><a href="">Add Students</a> </li>
+	<li><a href="">Assign Courses</a> </li>
 {% endblock %}
