--- a/lab10/feeder/templates/feeder/index.html
+++ b/lab10/feeder/templates/feeder/index.html
@@ -41,7 +41,7 @@
 
 {% block navbar %}
     <li><a href="courses">Courses</a></li>
-    <li><a href="{% url 'feeder:logout' %}">Sign out</a></li>
+    <li><a onclick="signOut();" href="{% url 'feeder:logout' %}">Sign out</a></li>
 {% endblock %}
 {% block name %}
     {{ user.get_full_name }}
