--- a/lab10/feeder/templates/admins/index.html
+++ b/lab10/feeder/templates/admins/index.html
@@ -8,7 +8,7 @@
 	    <div class="row">
 		    <div class="col s6" style="max-height: 400px; overflow: auto;">
 				<ul class="collection with-header">
-			        <li class="collection-header"><h4>All Courses</h4></li>
+			        <a class="black-text" href="{% url 'admins:courses' %}"><li class="collection-header"><h4>All Courses</h4></li></a>
 			        {% for course in courses %}	
 			        	<a class="collection-item" href="{% url 'admins:course' course.id %}">{{ course.course_name }} ( {{ course.course_code }} )</a>
 			        {% endfor %}
