--- a/lab10/feeder/templates/feeder/register.html
+++ b/lab10/feeder/templates/feeder/register.html
@@ -1,7 +1,10 @@
 {% extends "feeder/base_site.html" %}
 {% load static %}
 {% block content %}
-	<h1> Register Page, Welcome </h1>
+	<h1 class="center"> Register Page, Welcome </h1>
+	<div class="row">
+	<div class="card white col offset-s4 s4">
+	<div class="card-content">
 	<form method="POST">
 		{% csrf_token %}
 	    <p class="red-text"> {{ error_message }} </p>
@@ -16,7 +19,9 @@
 	    {% endfor %}
 		<button class="btn" type="submit" value="Register"><i class="material-icons right">send</i>Register</button>
 	</form>
-
+	</div>
+	</div>
+	</div>
 {% endblock %}
 
 
