--- a/lab10/feeder/templates/admins/success.html
+++ b/lab10/feeder/templates/admins/success.html
@@ -5,9 +5,7 @@
 {% endblock %}
 
 {% block navbar %}
-    <li><a href="{% url 'admins:addcourse' %}">Add Course</a></li>
-    <li><a href="{% url 'admins:courses' %}">Courses</a></li>
-    <li><a href="{% url 'admins:instructors' %}">Instructor</a></li>
+          <li><a href="">Assign Courses</a> </li>
     <li><a href="{% url 'admins:logout' %}">Sign out</a></li>
 {% endblock %}
 {% block name %}
