--- a/lab10/feeder/templates/admins/index.html
+++ b/lab10/feeder/templates/admins/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<h2 style="text-align:center" > Feed'er Admin Portal </h1> <a href="{% url 'admins:addstudents' %}" class="btn right">Add Students from CSV</a>
+<h2 style="text-align:center" > Feed'er Admin Portal </h1> <a href="{% url 'admins:addstudents' %}" class="btn hoverable waves-effect waves-light orange right">Add Students from CSV</a>
 <h5> Welcome back, {{ user.get_full_name }} </h5>
 <h6 class="green-text">{{ message }}</h6>
 	    <div class="row">
@@ -10,7 +10,7 @@
 				<ul class="collection with-header">
 			        <a class="black-text" href="{% url 'admins:courses' %}"><li class="collection-header"><h4>All Courses</h4></li></a>
 			        {% for course in courses %}	
-			        	<a class="collection-item" href="{% url 'admins:course' course.id %}">{{ course.course_name }} ( {{ course.course_code }} )</a>
+			        	<a class="collection-item orange-text" href="{% url 'admins:course' course.id %}">{{ course.course_name }} ( {{ course.course_code }} )</a>
 			        {% endfor %}
 			    </ul>
 			</div>
@@ -18,7 +18,7 @@
 				<ul class="collection with-header">
 			        <li class="collection-header"><h4>Instructors</h4></li>
 			        {% for instructor in instructors %}
-			        	<a class="collection-item" href="{% url 'admins:instructor' instructor.id %}">{{ instructor.user.get_full_name }} </a>
+			        	<a class="collection-item orange-text" href="{% url 'admins:instructor' instructor.id %}">{{ instructor.user.get_full_name }} </a>
 			        {% endfor %}
 			    </ul>
 			</div>
@@ -27,8 +27,6 @@
 
 {% block navbar %}
     <li><a href="{% url 'admins:addcourse' %}">Add Course</a></li>
-    <li><a href="{% url 'admins:courses' %}">Courses</a></li>
-    <li><a href="{% url 'admins:instructors' %}">Instructor</a></li>
     <li><a href="{% url 'admins:logout' %}">Sign out</a></li>
 {% endblock %}
 
