--- a/lab10/feeder/templates/admins/base_site.html
+++ b/lab10/feeder/templates/admins/base_site.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style type="text/css">
     body {
+      background-image: url("{% static 'admins/sayagata-400px.png' %}");
       display: flex;
       min-height: 100vh;
       flex-direction: column;
