--- a/lab10/feeder/templates/admins/index.html
+++ b/lab10/feeder/templates/admins/index.html
@@ -6,21 +6,33 @@
 <h5> Welcome back, {{ user.get_full_name }} </h5>
 <h6 class="green-text">{{ message }}</h6>
 	    <div class="row">
-		    <div class="col s6" style="max-height: 400px; overflow: auto;">
-				<ul class="collection with-header">
-			        <a class="black-text" href="{% url 'admins:courses' %}"><li class="collection-header"><h4>All Courses</h4></li></a>
+		    <div class="col s6" >
+				<ul class="collection with-header" style="max-height: 400px; overflow: auto;">
+			        {# <a class="black-text" href="{% url 'admins:courses' %}"> #}<li class="collection-header"><h4>All Courses</h4></li>{# </a> #}
 			        {% for course in courses %}	
 			        	<a class="collection-item orange-text" href="{% url 'admins:course' course.id %}">{{ course.course_name }} ( {{ course.course_code }} )</a>
 			        {% endfor %}
 			    </ul>
+		    	<ul class="collection with-header" style="max-height: 400px; overflow: auto;">
+		            <li class="collection-header"><h4>Assignments</h4></li>
+		            {% for assignment in assignments %}	
+		            	<a class="collection-item orange-text" href="#">{{ assignment.course.course_code }} - {{ assignment }} ( {{ assignment.deadline }} )</a>
+		            {% endfor %}
+		        </ul>
 			</div>
-			<div class="col s6" style="max-height: 400px; overflow: auto;">
-				<ul class="collection with-header">
+			<div class="col s6">
+				<ul class="collection with-header" style="max-height: 400px; overflow: auto;">
 			        <li class="collection-header"><h4>Instructors</h4></li>
 			        {% for instructor in instructors %}
 			        	<a class="collection-item orange-text" href="{% url 'admins:instructor' instructor.id %}">{{ instructor.user.get_full_name }} </a>
 			        {% endfor %}
 			    </ul>
+			    <ul class="collection with-header" style="max-height: 400px; overflow: auto;">
+		            <li class="collection-header"><h4>Feedbacks</h4></li>
+		            {% for feedback in feedbacks %}	
+		            	<a class="collection-item orange-text" href="#">{{ feedback.course.course_code }} - {{ feedback }} ( {{ feedback.deadline }} )</a>
+		            {% endfor %}
+		        </ul>
 			</div>
 		</div>
 {% endblock %}
