--- a/lab10/feeder/templates/feeder/base_site.html
+++ b/lab10/feeder/templates/feeder/base_site.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style type="text/css">
     body {
+      background-image: url("{% static 'admins/asanoha-400px.png' %}");
       display: flex;
       min-height: 100vh;
       flex-direction: column;
