--- a/lab11/Feeder27/app/src/main/res/layout/activity_main.xml
+++ b/lab11/Feeder27/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,29 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.feeder.audacity.feeder.MainActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:theme="?attr/actionBarTheme"
+        android:minHeight="?attr/actionBarSize"
+        android:id="@+id/toolbar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--style="@android:style/Widget.Holo.Light.Button.Borderless"-->
+        <!--android:drawableLeft="@android:drawable/ic_lock_power_off"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_marginLeft="333dp"-->
+        <!--android:layout_marginStart="333dp"-->
+        <!--android:id="@+id/logout"-->
+        <!--android:elevation="0dp" />-->
 </RelativeLayout>
