--- a/lab10/feeder/templates/feeder/index.html
+++ b/lab10/feeder/templates/feeder/index.html
@@ -4,13 +4,31 @@
 {% block content %}
 <h2 style="text-align:center" > Feed'er Management Portal </h2>
 <h5> Welcome back, {{ user.get_full_name }} </h5>
-	
-    {% if user.instructor.course.all %}
+	{# <div style="position: relative; height: 70px;"> #}
+	{# <div class="fixed-action-btn horizontal" style="position: absolute; display: inline-block; right: 24px;"> #}
+    {# <a class="btn-floating btn-large red"> #}
+      {# <i class="large material-icons">mode_edit</i> #}
+    {# </a> #}
+    {# <ul> #}
+      {# <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li> #}
+      {# <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li> #}
+      {# <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li> #}
+      {# <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li> #}
+    {# </ul> #}
+  {# </div> #}
+  {# </div> #}
+  <div class="row">
+  	<a href="{% url 'feeder:addfeedback' %}" class="btn-flat white-text center waves-effect waves-light col s3 green">Add Feedback</a>
+	<a href="{% url 'feeder:feedbacks' %}" class="btn-flat white-text center waves-effect waves-light col s3 orange">All Feedbacks</a>
+	<a href="{% url 'feeder:adddeadline' %}" class="btn-flat white-text center waves-effect waves-light col s3 green">Add Assignment</a>
+	<a href="{% url 'feeder:assignments' %}" class="btn-flat white-text center waves-effect waves-light col s3 orange darken-3">All Deadlines</a>
+  </div>
+    {% if courses %}
     <div class="row">
 	    <div class="col s6">
 			<ul class="collection with-header">
 		        <li class="collection-header"><h4>Your Courses</h4></li>
-		        {% for course in user.instructor.course.all %}	
+		        {% for course in courses %}	
 		        	<a class="collection-item">{{ course.course_name }} ( {{ course.course_code }} )</a>
 		        {% endfor %}
 		    </ul>
@@ -18,9 +36,9 @@
 		<div class="col s6">
 			<ul class="collection with-header">
 		        <li class="collection-header"><h4>Deadlines</h4></li>
-		        {# {% for course in user.instructor.course.all %}	 #}
-		        	{# <a class="collection-item">{{ course.course_name }} ( {{ course.course_code }} )</a> #}
-		        {# {% endfor %} #}
+		        {% for assignment in assignments %}	
+		        	<a class="collection-item">{{ assignment.course }} - {{ assignment.assignment_name }} ( {{ assignment.deadline }} ) </a>
+		        {% endfor %}
 		    </ul>
 		</div>
 	</div>
@@ -29,7 +47,7 @@
     <div class="card">
     <div class="card-content">
         <span class="card-title">No Courses</span>
-        <p> Please contact your administrator to get you registered to your courses.
+        <p> Please contact your administrator to register courses.
         </p>
     </div>
     </div> 
