--- a/lab10/feeder/templates/feeder/login.html
+++ b/lab10/feeder/templates/feeder/login.html
@@ -8,6 +8,10 @@
 <h2 style="text-align:center" > Feed'er Management Portal </h1>
 
 
+<form>
+  {% csrf_token %}
+</form>
+
 <div style="width: 400px; margin: 0 auto;" class="card white">
 <div class="card-content ">
 <form method="POST">
