--- a/lab10/feeder/templates/feeder/assignments.html
+++ b/lab10/feeder/templates/feeder/assignments.html
@@ -14,9 +14,12 @@
 			<li class="collection-item avatar">
 		      <i class="material-icons circle green">assignment</i>
 		      <span class="title"><b>{{ assignment.assignment_name }}</b></span>
-		         	{{ assignent.description }}
 		      <p>{{ assignment.course }} <br>
-		         {{ assignment.deadline }} 
+		         {{ assignment.deadline }}
+		         {% if assignment.description %}
+		         	<br><span class="grey-text">
+		         	{{ assignment.description }}</span>
+		         {% endif %}
  		      </p>
 		      <a href="#!" class="secondary-content"><i class="material-icons">assignment</i></a>
 		    </li>
