--- a/lab10/feeder/templates/feeder/base_site.html
+++ b/lab10/feeder/templates/feeder/base_site.html
@@ -56,7 +56,7 @@
 
 {% endblock %}
 </div>
-<script type="text/javascript" src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
+<script type="text/javascript" src="{% static 'admins/jquery-3.1.0.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'feeder/materialize.js' %}"></script>
 
 <script type="text/javascript">
