--- a/lab11/Feeder27/app/src/main/res/layout/activity_home.xml
+++ b/lab11/Feeder27/app/src/main/res/layout/activity_home.xml
@@ -22,6 +22,13 @@
         app:headerLayout="@layout/nav_header_home"
         app:menu="@menu/activity_home_drawer" />
 
-
+    <RelativeLayout
+        android:id="@+id/calendar"
+        android:layout_alignParentStart="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+    </RelativeLayout>
 
 </android.support.v4.widget.DrawerLayout>
