--- a/lab11/Feeder27/app/src/main/res/menu/activity_home_drawer.xml
+++ b/lab11/Feeder27/app/src/main/res/menu/activity_home_drawer.xml
@@ -24,11 +24,11 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_datasync"
                 android:icon="@drawable/ic_menu_share"
                 android:title="DataSync" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Logout" />
         </menu>
