--- a/lab11/Feeder27/app/src/main/res/layout/card_layout.xml
+++ b/lab11/Feeder27/app/src/main/res/layout/card_layout.xml
@@ -11,9 +11,16 @@
         android:padding="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+        <TextView
+            android:id="@+id/card_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textStyle="bold"
+            android:textSize="14dp"/>
         <TextView
             android:id="@+id/title"
+            android:layout_below="@+id/card_title"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:text="Assignment/Feedback"
