--- a/lab10/feeder/templates/feeder/feedback.html
+++ b/lab10/feeder/templates/feeder/feedback.html
@@ -8,7 +8,7 @@
 		<div class="card-content">
 		<h3 class="center">{{ feedback.fb_name }} <i class="material-icons">assignment</i> </h3> <hr>
 		{% for question in questions %}
-			  <div class="section col s9">
+			  <div class="sectionz">
 			    <h5></h5>> {{ question.question_text }} </h5>
 			    {% if question.question_type == 'text' and question.answer_set.all %}
 			    	<p class="center"> <b> No. of responses : {{ question.answer_set.count }} </b> </p>
@@ -70,7 +70,6 @@
 {% endblock %}
 
 {% block navbar %}
-    <li><a href="courses">Courses</a></li>
     <li><a onclick="signOut();" href="{% url 'feeder:logout' %}">Sign out</a></li>
 {% endblock %}
 {% block name %}
